feat(openapi): response schemas for periods
